rxresume/rxresume-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rxresume-server
  name: rxresume-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rxresume-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rxresume-server
    spec:
      containers:
      - image: amruthpillai/reactive-resume:server-latest
        name: rxresume-server
        ports:
        - containerPort: 3100
