rxresume/rxresume-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rxresume-client
  name: rxresume-client
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: rxresume-client
  type: ClusterIP
status:
  loadBalancer: {}
