rxresume/rxresume-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rxresume-db
  name: rxresume-db
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: rxresume-db
  type: ClusterIP
status:
  loadBalancer: {}
