rxresume/rxresume-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rxresume-server
  name: rxresume-server
spec:
  ports:
  - port: 3100
    protocol: TCP
    targetPort: 3100
  selector:
    app: rxresume-server
  type: ClusterIP
status:
  loadBalancer: {}
